--- a/vignettes/implementing-cookies.Rmd
+++ b/vignettes/implementing-cookies.Rmd
@@ -53,11 +53,13 @@ javascript, b) create the consent banner and c) add a cookies information panel:
 
 ```{r eval=FALSE}
 ui <- function(input, output, session) {
-  shinyjs::useShinyjs(),
-  dfe_cookie_script()
-  cookie_banner_ui("Your dashboard name"),
-  ...
-  cookies_panel()
+  fluidPage(
+    shinyjs::useShinyjs(),
+    dfe_cookie_script(),
+    cookie_banner_ui("Your dashboard name"),
+    ...
+    cookies_panel()
+  )
 }
 ```
 
