--- a/vignettes/implementing-cookies.Rmd
+++ b/vignettes/implementing-cookies.Rmd
@@ -14,17 +14,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-Cookie consent is a mandatory requirement for any dashboard when using cookies. 
-Typically, all DfE dashboards will be using cookies as part of tracking with
+Cookie consent is a mandatory requirement for any dashboard when using cookies 
+and typically all DfE dashboards will be using cookies as part of tracking with
 Google Analytics and so will require cookie consent.
 
 > Note that to activate Google Analytics on your data dashboard, you will need 
 to contact the Statistics Development team at 
 [statistics.development@education.gov.uk](mailto:statistics.development@education.gov.uk) and request a Google Analytics key.
 
-dfeshiny provides a standard GDS compliant banner, plus the underlying code, to
-allow end users to give or withhold their consent for cookies to be used. If 
-they withhold their consent, then tracking with Google Analytics will be halted.
+dfeshiny provides a standard GDS compliant banner, a cookie information panel 
+and the underlying code required to allow end users to give or withhold their 
+consent for cookies to be used. If they withhold their consent, then tracking 
+with Google Analytics will be halted.
 
 Implementing cookie control on your dashboard is handled by several functions 
 in dfeshiny, with the process outlined below.
@@ -32,23 +33,25 @@ in dfeshiny, with the process outlined below.
 The cookie control requires some underlying javascript to remove and create 
 cookies as well as switch Google Analytics on and off. This javascript needs 
 including in your dashboard's www/ folder, which can be achieved by running the 
-following command from the R console:
+following command from the R console in your dashboard project / repo:
 
 ```{r eval=FALSE}
 dfeshiny::init_cookies()
 ```
 
 Before adding the cookie consent banner, we recommend adding your Google 
-Analytics key as a variable to your dashboard's [global.R](https://github.com/dfe-analytical-services/dfeshiny/blob/cookie-module/tests/test_dashboard/global.R) 
+Analytics key as a variable to your dashboard's **[global.R](https://github.com/dfe-analytical-services/dfeshiny/blob/cookie-module/tests/test_dashboard/global.R)**
 file (replacing `ABCDE12345` below with the key provided by the Statistics 
 Development team):
 
-```
-google_analytics_key <- 'ABCDE12345'
+```{r eval=FALSE}
+google_analytics_key <- "ABCDE12345"
 ```
 
-You will then need to add the necessary code to your ui.R file to a) run the 
-javascript, b) create the consent banner and c) add a cookies information panel:
+You will then need to add the necessary code to your **ui.R** file to a) run the 
+javascript (`dfe_cookie_script`), b) create the consent banner 
+(`cookie_banner_ui`) and c) add a cookies information panel 
+(`cookies_panel_ui`):
 
 
 ```{r eval=FALSE}
@@ -56,22 +59,40 @@ ui <- function(input, output, session) {
   fluidPage(
     shinyjs::useShinyjs(),
     dfe_cookie_script(),
-    cookie_banner_ui("Your dashboard name"),
-    ...
-    cookies_panel()
+    cookie_banner_ui(
+      "cookie-banner",
+      "Your dashboard name"
+    ),
+    shiny::navlistPanel(
+      "",
+      id = "navlistPanel",
+      widths = c(2, 8),
+      well = FALSE,
+      cookies_panel_ui(
+        id = "cookie-panel",
+        google_analytics_key = google_analytics_key
+      )
+    )
   )
 }
 ```
 
-You should then add the `cookie_banner_server` function to your server.R script:
+You should then add the `cookie_banner_server` and `cookies_panel_server` 
+functions to your **server.R** script:
 
 ```{r eval=FALSE}
-cookie_banner_server(
-   "cookies",
-   input_cookies = reactive(input$cookies),
-   input_clear = reactive(input$cookie_consent_clear),
-   parent_session = session,
-   google_analytics_key = google_analytics_key
+output$cookie_status <- cookie_banner_server(
+  "cookie-banner",
+  input_cookies = shiny::reactive(input$cookies),
+  parent_session = session,
+  google_analytics_key = google_analytics_key,
+  cookie_link_panel = "cookies_panel_ui"
+)
+
+cookies_panel_server(
+  id = "cookie-panel",
+  input_cookies = shiny::reactive(input$cookies),
+  google_analytics_key = google_analytics_key
 )
 ```
 
