--- a/vignettes/what-to-avoid.Rmd
+++ b/vignettes/what-to-avoid.Rmd
@@ -27,7 +27,7 @@ underlying considerations around many of these are:
 
 - Continuity: 
   - Are functions and packages expected to have long term support from their developers?
-  - Are functions and packages contain complexities that will be difficult to pick up for whoever 
+  - Do functions and packages contain complexities that will be difficult to pick up for whoever 
   succeeds you?
 - Accessibility:
   - Are the elements created by functions and packages assigned the appropriate html tags and 
