--- a/vignettes/what-to-avoid.Rmd
+++ b/vignettes/what-to-avoid.Rmd
@@ -46,7 +46,7 @@ shinydashboard is now superseded and has been minimally maintained since 2018. I
 elements based on the web toolkit [Bootstrap v3](https://getbootstrap.com/docs/3.3/), which has 
 itself moved on to v5. This presents potential issues around continuity, accessibility and 
 functionality (in particular when moving to smaller screen sizes). As such, we recommend using 
-[bslib](https://rstudio.github.io/bslib/) which provides equivalent functionality, but underpinned 
+[bslib](https://rstudio.github.io/bslib/), which provides equivalent functionality, but is underpinned 
 by [Bootstrap v5](https://getbootstrap.com/docs/5.3/getting-started/introduction/), which allows 
 for better usability across different screen sizes (including high zoom on a computer screen).
 
